--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,7 @@
     "#Or even better, as an environment variable that could then be imported!\n",
     "#For now, we'll simply hardcode them into our notebook for simplicity.\n",
     "client_id = \"kCJzsnK_Zb_iwf5c9JgXcg\"\n",
-    "api_key = #Your api key goes here (as a string)"
+    "api_key = \"C5hkOo6eG5Q0vz6imtyZtPoAge7GhIbl1Nolr81kOHT4TiKqS-7rmyhMby8J-rW3VObRssSmH-o_hV8UpFirG7dVwu0G8N2S-AE6yPT1uHcuFGkz3JEWh5fWizvcXHYx\""
    ]
   },
   {
